[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitlogstats"
description = "Track developers' contributions to one or more git repositories within a particular time range."
version = "1.0.4"
authors = [
  { name="Foo Barstein", email="foo.barstein@onepotcooking.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["git", "developer", "contribution", "analysis", "report", "log"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/bloombar/git-developer-contribution-analysis"
"Repository" = "https://github.com/bloombar/git-developer-contribution-analysis.git"
"Bug Tracker" = "https://github.com/bloombar/git-developer-contribution-analysis/issues"

[project.scripts]
gitlogstats = "gitlogstats.__main__:main"
