[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitlogstats"
description = "Track developers' contributions to one or more git repositories within a particular time range."
version = "1.0.5"
authors = [
  { name="Tobody Tothing", email="nobody.nothing@nowhere.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["git", "developer", "contribution", "analysis", "report", "log"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "build", "twine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/gitlogstats"]
omit = ["src/gitlogstats/__main__.py"]

[tool.coverage.report]
show_missing = true

[project.urls]
"Homepage" = "https://github.com/bloombar/git-developer-contribution-analysis"
"Repository" = "https://github.com/bloombar/git-developer-contribution-analysis.git"
"Bug Tracker" = "https://github.com/bloombar/git-developer-contribution-analysis/issues"

[project.scripts]
gitlogstats = "gitlogstats.__main__:main"
